# voog-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  voog-kit.py  voog.py
.github/workflows/: publish.yml  test.yml
docs/: voog-mcp-endpoint-coverage.md
docs/handoff-prompts/: 2026-04-28-parallelization-prompts.md  mcp-phase-c-d-kickoff.md  mcp-phase-e-followups.md
docs/plans/: 2026-04-26-mcp-server-plan.md
docs/specs/: 2026-04-26-mcp-server.md  2026-04-28-parallelization.md
docs/superpowers/plans/: 2026-04-28-voog-mcp-v1.md  2026-04-30-voog-mcp-endpoint-coverage.md
src/voog/: __init__.py  __main__.py  _concurrency.py  _payloads.py  _upload_validation.py  client.py  config.py  errors.py  projections.py
src/voog/api/: serve.py
src/voog/cli/: main.py
tests/: _test_helpers.py  conftest.py  test__test_helpers.py  test_api_serve.py  test_cli_config.py  test_cli_layouts.py  test_cli_list.py  test_cli_main.py  test_cli_pages.py  test_cli_products.py  test_cli_pull.py  test_cli_push.py  test_cli_redirects.py  test_cli_serve.py  test_cli_snapshot.py  test_client.py  test_concurrency.py  test_config.py  test_errors.py  test_helpers_build_list_params.py  test_helpers_validators.py  test_layout_create.py  test_main.py  test_mcp_integration.py  test_payloads.py  test_projections.py  test_resource_uri_collisions.py  test_resources_articles.py  test_resources_helpers.py  test_resources_layouts.py  test_resources_pages.py  test_resources_products.py  test_resources_redirects.py  test_schema_defaults.py  test_server_async_dispatch.py  test_server_logging.py  test_tools_articles.py  test_tools_content_partials.py  test_tools_ecommerce_settings.py  test_tools_elements.py  (+17 more)
tests/fixtures/: voog-site-runnel.json
voog_mcp/: __init__.py  __main__.py  _concurrency.py  client.py  config.py  errors.py  projections.py  server.py
voog_mcp/resources/: _helpers.py  articles.py  layouts.py  pages.py  products.py  redirects.py
voog_mcp/tools/: layouts.py  layouts_sync.py  pages.py  pages_mutate.py  products.py  products_images.py  redirects.py  snapshot.py
(+36 files in other folders)
