[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "voog-mcp"
version = "1.2.0"
description = "CLI and MCP server for Voog CMS — Liquid templates, pages, products, ecommerce"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Tõnu Runnel", email = "runnel@gmail.com"}]
keywords = ["voog", "cms", "mcp", "liquid", "ecommerce"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/runnel/voog-mcp"
Repository = "https://github.com/runnel/voog-mcp"
Issues = "https://github.com/runnel/voog-mcp/issues"
Changelog = "https://github.com/runnel/voog-mcp/blob/main/CHANGELOG.md"

[project.scripts]
voog = "voog.cli.main:main"
voog-mcp = "voog.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["voog*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
